# messy_repo1

./: analysis1.py  data.csv  myanalysis.ipynb  notes.txt  pyproject.toml
